# nerd-bot

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  redeploy.sh  renovate.json  tsconfig.json
.devcontainer/: devcontainer.json  docker-compose.yml  editor.Dockerfile
.github/workflows/: deploy.yml  rebase.yml  test.yml
mothership/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
mothership/src/: bot.rs  dadjoke.rs  main.rs  twitter.rs
mothership/src/commands/: demon.rs  mod.rs
prisma/: elo-migration.ts  prod.sql  schema.prisma  seed.dev.ts
prisma/migrations/20230217011807_init/: migration.sql
prisma/migrations/20230406023928_update_scores/: migration.sql
src/: client.ts  commands.ts  config.ts  dadjoke.rs  env.ts  index.ts  main.rs
src/commands/: botstat.ts  dev.ts  index.ts  leaderboard.ts  ping.ts  plt.ts  stat.ts  status.rs  vmstat.ts
src/commands/dev/: pgdump.ts  pgpush.ts  reactionslog.ts
src/events/: interactionCreate.ts  messageCreate.ts  ready.ts
src/types/: canvas.ts  command.ts  result.ts
src/util/: chartjsDateAdapter.ts  collectNerdReaction.ts  db.ts  getMessage.ts  getScore.ts  getScorePlot.ts  getUser.ts  log.ts  score.ts  upsertMessage.ts  upsertUser.ts
voice/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tsconfig.json
voice/src/: client.ts  index.ts  main.ts  util.ts
voice/src/interfaces/: context.ts  slashCommand.ts
(+6 files in other folders)
