[package]
edition = "2021"
name = "anti-ahmad-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
serenity = {version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
unwrap = "1.2.1"
