[package]
edition = "2021"
name = "anti-ahmad-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
redis = {version = "0.21.5", features = ["tokio-comp"]}
unwrap = "1.2.1"

[dependencies.serenity]
default_features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
version = "0.11"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal"]
version = "1.0"
